fix: display code highlighter overflow bug

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -45,6 +45,7 @@ pre[class*='language-'] {
   margin: 0.5em 0;
   padding: 1.3125rem;
   font-size: 14px;
+  display: grid; /* this code is really weird */
 }
 
 pre[class*='language-']::-moz-selection {
